# phd-research-template

./: .gitignore  .gitkeep  README.md  pyproject.toml
.github/workflows/: ci.yml
