[project]
name = "my-research-project"
version = "0.1.0"
description = "A short description of the project."
authors = [
    { name = "[Your Name]", email = "[your.email]@berkeley.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyterlab",
]

[tool.setuptools]
packages = ["src"]